testdata/prettier/w-assign-miss-identifier-array.out
Syntax error: "./testdata/prettier/w-assign-miss-identifier-array.goat" (line 3, column 1):
unexpected [
expecting atomic statement or composite statement
