testdata/prettier/w-assign-miss-identifier-array.goat
proc main()
begin
[23] := 23;
end
